cmake_minimum_required(VERSION 2.8)

project(sdlone)

set(SOURCES "main.cpp")
set(HEADERS "cleanup.h")

add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED SDL2_image REQUIRED sdl2)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES})
